// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditList Collapsible should match snapshot 1`] = `
<div>
  <div
    class="hs_collapsible hs_collapsible_expanded hs_edit_list"
  >
    <div
      class="hs_collapsible_title"
    >
      <div
        class="header"
      >
        list
      </div>
    </div>
    <div
      class="hs_collapsible_content hs_scrolly"
      style="max-height: 400px; transition: max-height 0.25s ease-in-out;"
    >
      <div>
        <span
          class="hsedit_label default"
        >
          add...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditList Non-Collapsible with header should match snapshot 1`] = `
<div>
  <div
    class="hs_edit_list"
  >
    <div
      class="header"
    >
      list
    </div>
    <span
      class="hsedit_label default"
    >
      add...
    </span>
  </div>
</div>
`;

exports[`EditList Non-Collapsible, no header should match snapshot 1`] = `
<div>
  <div
    class="hs_edit_list"
  >
    <span
      class="hsedit_label default"
    >
      add...
    </span>
  </div>
</div>
`;
